# ChangeLog for www-client/epiphany-extensions
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/epiphany-extensions/ChangeLog,v 1.154 2011/10/30 17:36:45 armin76 Exp $

  30 Oct 2011; Raúl Porcel <armin76@gentoo.org>
  epiphany-extensions-2.32.0-r1.ebuild:
  alpha/ia64/sparc stable wrt #385699

  21 Oct 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  epiphany-extensions-2.32.0-r1.ebuild:
  x86 stable wrt bug #385699

  16 Oct 2011; Kacper Kowalik <xarthisius@gentoo.org>
  epiphany-extensions-2.32.0-r1.ebuild:
  ppc stable wrt #385699

  14 Oct 2011; Samuli Suominen <ssuominen@gentoo.org>
  epiphany-extensions-2.32.0-r1.ebuild:
  amd64 stable wrt #385699

  05 Oct 2011; Kacper Kowalik <xarthisius@gentoo.org>
  epiphany-extensions-2.32.0.ebuild:
  ppc stable wrt #369909

*epiphany-extensions-3.0.0-r1 (19 Aug 2011)

  19 Aug 2011; Nirbheek Chauhan <nirbheek@gentoo.org>
  +epiphany-extensions-3.0.0-r1.ebuild:
  Bump to 3.0.0, from gnome overlay for GNOME 3

*epiphany-extensions-2.32.0-r1 (05 Jun 2011)

  05 Jun 2011; Pacho Ramos <pacho@gentoo.org>
  -epiphany-extensions-2.30.2.ebuild, +epiphany-extensions-2.32.0-r1.ebuild:
  Add support for adblock extension as reported by Jani Kananen in bug #370081,
  the problem was fixed by upstream in newer glib versions time ago, RDEPENDing
  then on glib version I have used to confirm the original problem went away.
  Remove old.

  28 Apr 2011; Mark Loeser <halcy0n@gentoo.org>
  -epiphany-extensions-2.26.1-r1.ebuild:
  epiphany-2.26 was removed, so this should have been as well

  22 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org>
  epiphany-extensions-2.32.0.ebuild:
  Marked ~ppc/~ppc64 wrt #359395

  21 Mar 2011; Nirbheek Chauhan <nirbheek@gentoo.org>
  epiphany-extensions-2.30.2.ebuild:
  Fix deps for 2.30.2 as well

  21 Mar 2011; Brent Baude <ranger@gentoo.org>
  epiphany-extensions-2.30.2.ebuild:
  Marking epiphany-extensions-2.30.2 ~ppc64 for bug 359395
