@@ -1,13 +1,12 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/epiphany-extensions/Attic/epiphany-extensions-3.0.0-r1.ebuild,v 1.1 2011/08/19 14:55:28 nirbheek Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/epiphany-extensions/Attic/epiphany-extensions-3.2.0.ebuild,v 1.1 2011/11/06 05:02:41 tetromino Exp $
 
-EAPI="3"
+EAPI="4"
 GCONF_DEBUG="yes"
 GNOME2_LA_PUNT="yes"
-PYTHON_DEPEND="2"
 
-inherit gnome2 python
+inherit gnome2
 
 DESCRIPTION="Extensions for the Epiphany web browser"
 HOMEPAGE="http://www.gnome.org/projects/epiphany/extensions.html"
@@ -17,14 +16,16 @@ SLOT="0"
 KEYWORDS="~alpha ~amd64 ~ia64 ~ppc ~ppc64 ~sparc ~x86"
 IUSE="dbus examples pcre"
 
-RDEPEND=">=www-client/epiphany-3.0.0
+RDEPEND=">=www-client/epiphany-3.2.0
 	app-text/opensp
 	>=dev-libs/glib-2.26.0:2
 	>=dev-libs/libxml2-2.6:2
 	>=x11-libs/gtk+-2.90.4:3
 	net-libs/webkit-gtk:3
 
-	dbus? ( >=dev-libs/dbus-glib-0.34 )
+	dbus? (
+		>=dev-libs/dbus-glib-0.34
+		sys-apps/dbus )
 	pcre? ( >=dev-libs/libpcre-3.9-r2 )"
 DEPEND="${RDEPEND}
 	>=dev-util/intltool-0.40
@@ -47,14 +48,6 @@ pkg_setup() {
 
 	G2CONF="${G2CONF}
 		--disable-schemas-compile
-		--disable-maintainer-mode
 		--with-extensions=$(echo "${extensions}" | sed -e 's/[[:space:]]\+/,/g')"
 	DOCS="AUTHORS ChangeLog HACKING NEWS README"
-
-	python_set_active_version 2
-}
-
-src_prepare() {
-	gnome2_src_prepare
-	python_convert_shebangs -r 2 .
 }
