@@ -1,6 +1,14 @@
 # ChangeLog for www-client/epiphany-extensions
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/epiphany-extensions/ChangeLog,v 1.154 2011/10/30 17:36:45 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/epiphany-extensions/ChangeLog,v 1.155 2011/11/06 05:02:41 tetromino Exp $
+
+*epiphany-extensions-3.2.0 (06 Nov 2011)
+
+  06 Nov 2011; Alexandre Rostovtsev <tetromino@gentoo.org>
+  -epiphany-extensions-3.0.0-r1.ebuild, +epiphany-extensions-3.2.0.ebuild:
+  Bump to 3.2.1 from the gnome overlay, drop old. Drop python dependency
+  (epiphany-extensions have not used python since gnome-2 days). Notable
+  changes: fixes adblock crash.
 
   30 Oct 2011; Raúl Porcel <armin76@gentoo.org>
   epiphany-extensions-2.32.0-r1.ebuild:
